--- a/main/index.html
+++ b/main/index.html
@@ -10,10 +10,11 @@
     <div class="container">
         <h1>Notas dos Alunos</h1>
         <form id="notes-form">
-            <label for="note">Digite uma nota (0 para parar):</label>
+            <label for="note">Digite uma nota:</label>
             <input type="number" id="note" step="0.01" required>
             <button type="submit">Adicionar Nota</button>
         </form>
+        <button id="calculate">Calcular</button>
         <div class="result" id="result">
             <!-- Resultados serão exibidos aqui -->
         </div>
